--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>My CG</title>
+		<title>I4B39 CG HomeWork</title>
 	</head>
 	
 	<body>
@@ -12,7 +12,7 @@
 			<tbody>
 				<tr>
 					<td>
-						<img border="0" src=".gif" width="350" height="250">
+						<img border="0" src="CGHw1.gif" width="350" height="250">
 					</td>
 					<td>
 						<img border="0" src=".gif" width="350" height="250">
@@ -27,7 +27,7 @@
 				<tr>
 					<td width="350">
 						<p align="center">
-							<a href=".html">Hw1</a>
+							<a href="hw1.html">Hw1</a>
 						</p>
 					</td>
 					<td width="350">
