--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<tr>
 					<td width="350">
 						<p align="center">
-							<a href="hw1.html">Hw1</a>
+							<a href="https://github.com/cutebaby3110/hw/blob/master/hw1.html">Hw1</a>
 						</p>
 					</td>
 					<td width="350">
