--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<tbody>
 				<tr>
 					<td>
-						<img border="0" src="https://github.com/cutebaby3110/hw/blob/master/gifs/CGHw1.gif" width="350" height="250">
+						<img border="0" src="https://github.io/cutebaby3110/hw/gifs/CGHw1.gif" width="350" height="250">
 					</td>
 					<td>
 						<img border="0" src=".gif" width="350" height="250">
@@ -27,7 +27,7 @@
 				<tr>
 					<td width="350">
 						<p align="center">
-							<a href="https://github.com/cutebaby3110/hw/blob/master/hw1.html">Hw1</a>
+							<a href="https://github.io/cutebaby3110/hw/hw1.html">Hw1</a>
 						</p>
 					</td>
 					<td width="350">
