--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<tbody>
 				<tr>
 					<td>
-						<img border="0" src="https://github.io/cutebaby3110/hw/gifs/CGHw1.gif" width="350" height="250">
+						<img border="0" src="http://cutebaby3110.github.io/hw/gifs/CGHw1.gif" width="350" height="250">
 					</td>
 					<td>
 						<img border="0" src=".gif" width="350" height="250">
